<resources>
    <string name="app_name">rq-demo</string>
    <string name="title">title</string>
    <string name="button_1">constraint_layout</string>
    <string name="button_2">login_layout</string>
    <string name="button_3">pick_contact</string>
    <string name="button_4">language_selection_layout</string>
    <string name="button_5">RecyclerView</string>
    <string name="button_6">thread</string>
    <string name="button_7">Shared Preference</string>
    <string name="button_8">button 8</string>
    <string name="button_9">button 9</string>
    <string name="button_10">button 10</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="java_fragment_text" translatable="false">Java is a High Level, class-based,
        object-oriented programming language that is designed to have as few implementation dependencies as possible.</string>
    <string name="android_fragment_text" translatable="false">Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets.</string>
    <string name="bottom_text">no more</string>
    <string name="hintText" translatable="false">提示信息: \n点击知道了不再提示</string>
</resources>