<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/gray"
                    android:text="@string/button_1"
                    android:textColor="@color/black"
                    tools:layout_editor_absoluteX="160dp"
                    tools:layout_editor_absoluteY="74dp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/gray"
                    android:text="@string/button_2"
                    android:textColor="@color/black"
                    tools:layout_editor_absoluteX="160dp"
                    tools:layout_editor_absoluteY="74dp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/gray"
                    android:text="@string/button_3"
                    android:textColor="@color/black"
                    tools:layout_editor_absoluteX="160dp"
                    tools:layout_editor_absoluteY="74dp" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/gray"
                    android:text="@string/button_4"
                    android:textColor="@color/black"
                    tools:layout_editor_absoluteX="160dp"
                    tools:layout_editor_absoluteY="74dp" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/gray"
                    android:text="@string/button_5"
                    android:textColor="@color/black"
                    tools:layout_editor_absoluteX="160dp"
                    tools:layout_editor_absoluteY="74dp" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/gray"
                    android:text="@string/button_6"
                    android:textColor="@color/black"
                    tools:layout_editor_absoluteX="160dp"
                    tools:layout_editor_absoluteY="74dp" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/gray"
                    android:text="@string/button_7"
                    android:textColor="@color/black"
                    tools:layout_editor_absoluteX="160dp"
                    tools:layout_editor_absoluteY="74dp" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/gray"
                    android:text="@string/button_8"
                    android:textColor="@color/black"
                    tools:layout_editor_absoluteX="160dp"
                    tools:layout_editor_absoluteY="74dp" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/gray"
                    android:text="@string/button_9"
                    android:textColor="@color/black"
                    tools:layout_editor_absoluteX="160dp"
                    tools:layout_editor_absoluteY="74dp" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/gray"
                    android:text="@string/button_10"
                    android:textColor="@color/black"
                    tools:layout_editor_absoluteX="160dp"
                    tools:layout_editor_absoluteY="74dp" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>